Fixing links paddings in user block on smaller screens

--- a/client/styles/_nav.scss
+++ b/client/styles/_nav.scss
@@ -144,7 +144,6 @@ $block-color: #5f3c3c;
     margin: 0;
     background: $block-color;
     color: white;
-    //bottom: -12.5vw;
     top: 120%;
     box-sizing: border-box;
     display: flex;
@@ -230,8 +229,15 @@ $block-color: #5f3c3c;
             border: none;
             width: 50vw;
             font-size: 4vw;
-            bottom: -45vw;
             right: 0;
+
+            h4 {
+                padding: 5% 0 10% 0;
+            }
+
+            li {
+                padding: 5% 0;
+            }
 
             &::before {
                  display: none;
